fix buggy navigation banner on narrow viewport widths

--- a/style.css
+++ b/style.css
@@ -3,12 +3,8 @@ body {
 	color: white;
 	font-family: "Akatab", sans-serif;
 	margin: 0;
-}
-@media (min-width: 1000px) {
-	body {
-		font-size: 16px;
-		line-height: 22px;
-	}
+	font-size: 16px;
+	line-height: 22px;
 }
 .sub-section-buffer {
 	margin-top: -100px;
@@ -102,23 +98,24 @@ a.source-link {
 .bio-nav {
 	width: 50px;
 	text-align: center;
+	z-index: 1;
 }
 .expandable-page-nav :nth-child(2) {
 	display: none;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	margin-top: 10px;
 }
 .expandable-page-nav :nth-child(3) {
 	display: none;
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 .expandable-page-nav :nth-child(4) {
 	display: none;
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 .expandable-page-nav :nth-child(5) {
 	display: none;
-	font-size: 1.2rem;
+	font-size: 1rem;
 }
 .expandable-page-nav:hover :nth-child(2) {
 	display: inline;
@@ -148,17 +145,18 @@ a.source-link {
 	align-items: center;
 	flex-direction: column;
 	gap: 1rem;
-	padding-left: 100px;
-	margin-left: -100px;
+	padding-left: 80px;
+	margin-left: -80px;
 	padding-top: 10px;
 	margin-top: -10px;
-	padding-right: 100px;
-	margin-right: -100px;
+	padding-right: 80px;
+	margin-right: -80px;
 	border-radius: 10px;
 }
 .expandable-page-nav:hover {
 	animation-timing-function: ease;
 	background-color: #4B1019;
+	z-index: 2;
 }
 .expandable-page-nav.dev-nav:hover {
 	animation-name: expand-dev;
